[tool.poetry]
name = "json-structure"
version = "0.1.0"
description = "explores the structure of a json"
authors = ["Manuel Balmeo"]
license = "gpl v2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
